# HowToHandleErrorsandExceptionsInSeleniumPython

./: README.md  pyproject.toml
seltests/: test_handle_nosuchelement_firefox.py  test_handle_nosuchelement_google.py  test_handle_staleelement_firefox.py  test_handle_staleelement_google.py  test_nosuchelement_firefox.py  test_nosuchelement_google.py  test_staleelement_firefox.py  test_staleelement_google.py
